# fxTools

./: Cargo.toml  README.md  build.rs
src/: main.rs  utils.rs
src/fastx/: stat.rs
src/utils/: attr.rs  common.rs  diff.rs  findgap.rs  findseq.rs  getseq.rs  reform.rs  sample.rs  split.rs
src/utils/stat/: io.rs  mod.rs  path.rs
