[package]
name = "bioTools"
version = "0.1.0"
authors = ["Moold <mooldhu@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
kseq = "0.2.4"
clap = "3.0.0-beta.2"
byte-unit = "4.0.12"
regex = "1"
lazy_static = "1.4.0"
hashbrown = "0.11"
indoc = "1.0"

[profile.release]
# debug = true
