[package]
name = "fxTools"
version = "0.3.1"
authors = ["Moold <mooldhu@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
atty = "0.2"
kseq = "0.5.2"
clap = { version = "3.2", features = ["cargo"] }
byte-unit = "4.0.12"
regex = "1.6"
lazy_static = "1.4.0"
hashbrown = "0.11"
indoc = "1.0"
owo-colors = "3"
rayon = "1.5"
crossbeam-utils = "0.8"
crossbeam-channel = "0.5"
flate2 = { version = ">=1.0.17", features = ["zlib-ng-compat"], default-features = false }
memchr = "2.4"
rand = { version = "0.8.5", features = ["alloc"] }
once_cell = "1.21.3"

[target.'cfg(not(target_env = "msvc"))'.dependencies]
tikv-jemallocator = "0.5"

[profile.release]
strip = "none"
lto = true
codegen-units = 1
panic = "abort"

